# flake8-final

./: CHANGELOG.md  CONTRIBUTING.md  Dockerfile  Makefile  README.md  Taskfile.yml  lint-requirements.txt  pyproject.toml  setup.cfg
.github/workflows/: release.yml  test.yml
flake8_final/: __init__.py  entry.py
flake8_no_inheritance/: example.py
tests/test_example/: test_entry.py  test_some_function.py
tests/unit/: test_entry.py
