# SPDX-FileCopyrightText: Copyright (c) 2023-2026 Almaz Ilaletdinov <a.ilaletdinov@yandex.ru>
# SPDX-License-Identifier: MIT

[tool.poetry]
name = "flake8-final"
description = "flake8 plugin for check and inheritance of implementations"
version = "0.0.3"
license = "MIT"

authors = ["Almaz Ilaletdinov <a.ilaletdinov@yandex.ru>"]

readme = "README.md"

repository = "https://github.com/blablatdinov/flake8-final"

keywords = []

classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Developers",
  "Operating System :: OS Independent",
  "Topic :: Software Development :: Libraries :: Python Modules",
]

[tool.poetry.dependencies]
python = "^3.9"
flake8 = "^7.1"

[tool.poetry.plugins."flake8.extension"]
FIN = "flake8_final.entry:Plugin"

[tool.poetry.group.test.dependencies]
mypy = "1.19.1"
pytest = "8.4.2"
pytest-cov = "7.0.0"
pytest-randomly = "4.0.1"
astpretty = "3.0.0"
ruff = "0.14.10"

[build-system]
requires = ["poetry-core>=1.2.0"]
build-backend = "poetry.core.masonry.api"
